2007-10-23  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/AbstractRenderer.java
	(lookupSeriesPaint): Call accessor methods for per-series paint,
	(lookupSeriesFillPaint): Likewise,
	(lookupSeriesOutlinePaint): Likewise,
	(lookupSeriesStroke): Likewise,
	(lookupSeriesOutlineStroke): Likewise,
	(lookupSeriesStroke): Likewise.

2007-10-22  Henry Proudhon  <henry.proudhon@insa-lyon.fr>

	* source/swt/org/jfree/experimental/chart/swt/ChartComposite.java: 
	(chart): Made the chart field be private again,
	(ChartComposite): Refactored class, now implements PaintListener, 
	MouseListener and MouseMovedListener,
	(zoom): Fixed bug with multiple plots,
	(addChartMouseListener): Implemented,
	(removeChartMouseListener): Likewise,
	(restoreAutoDomainBounds): Fixed NPE,
	(restoreAutoRangeBounds): Likewise,
	(widgetDefaultSelected): Implemented,
	(addSWTListener): New method,
	(mouseDoubleClick): Likewise,
	(mouseDown): Likewise,
	(mouseUp): Likewise,
	(mouseMove): Likewise,
	(paintControl): Likewise,
	* source/swt/org/jfree/experimental/swt/SWTUtils.java
	(toAwtMouseEvent): changed method signature.

2007-10-22  Henry Proudhon  <henry.proudhon@insa-lyon.fr>

	* source/swt/org/jfree/experimental/swt/SWTUtils.java
	(toAwtMouseEvent): Improved mouse event conversion.

2007-10-22  Henry Proudhon  <henry.proudhon@ensmp.fr>

	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
	(composite): New field,
	(setComposite): Implemented,
	(getComposite): Return from field.

2007-10-22  Henry Proudhon  <henry.proudhon@insa-lyon.fr>

	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
	(getClip): Implemented.

2007-10-17  David Gilbert  <david.gilbert@object-refinery.com>

	* experimental/org/jfree/experimental/chart/plot/dial/AbstractDialLayer.java
	(equals): New method override,
	(clone): Likewise,
	* experimental/org/jfree/experimental/chart/plot/dial/DialBackground.java
	(equals): Added call to super.equals();