@@ -1,5 +1,16 @@
 2007-10-23  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
+	(hints): New field,
+	(SWTGraphics2D): Initialise new field,
+	(getRenderingHint): Implemented,
+	(setRenderingHint): Likewise,
+	(getRenderingHints): Likewise,
+	(addRenderingHints): Likewise,
+	(setRenderingHints): Likewise.
+
+2007-10-23  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/renderer/AbstractRenderer.java
 	(lookupSeriesPaint): Call accessor methods for per-series paint,
 	(lookupSeriesFillPaint): Likewise,
